Solved Visibility function and a bit fixed HTML

--- a/style.css
+++ b/style.css
@@ -106,3 +106,6 @@ button:hover {
     background-color: rgb(230, 251, 255);
 }
 
+.visibImg {
+    visibility: hidden;
+}
